--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "react-router-dom": "^7.2.0",
     "react-simple-maps": "^3.0.0",
     "react-swipeable": "^7.0.2",
+    "react-toastify": "^11.0.5",
     "recharts": "^2.15.1",
     "resend": "^4.1.2",
     "sequelize": "^6.37.5",
