--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
     "recharts": "^2.15.1",
     "resend": "^4.1.2",
     "sequelize": "^6.37.5",
+    "serverless-http": "^3.2.0",
     "socket.io": "^4.8.1",
     "socket.io-client": "^4.8.1",
     "swiper": "^11.2.4",
