--- a/haya-backend/wrangler.toml
+++ b/haya-backend/wrangler.toml
@@ -1,6 +1,6 @@
 name = "haya-api"
 compatibility_date = "2025-05-06"
-main = "./api/server.js"    
+main = "../api/server.js"    
 workers_dev = true
 
 [build]
