--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
+    "start": "node api/server.js",      
     "lint": "eslint .",
     "preview": "vite preview"
   },
