--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "start": "node api/server.js",      
+    "start": "node api/index.js",     
     "lint": "eslint .",
     "preview": "vite preview"
   },
