--- a/haya-backend/package.json
+++ b/haya-backend/package.json
@@ -1,40 +1,105 @@
 {
-  "name": "haya-backend",
-  "version": "1.0.0",
-  "main": "index.js",
+  "name": "haya",
+  "private": true,
+  "version": "0.0.0",
+  "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "vite",
+    "build": "vite build",
+    "start": "node api/index.js",
+    "lint": "eslint .",
+    "preview": "vite preview"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "description": "",
   "dependencies": {
-    "amqplib": "^0.10.5",
-    "axios": "^1.8.1",
-    "bcryptjs": "^2.4.3",
-    "cloudinary": "^1.41.3",
-    "cookie-parser": "^1.4.7",
-    "cors": "^2.8.5",
-    "crypto": "^1.0.1",
+    "@fullcalendar/daygrid": "^6.1.15",
+    "@fullcalendar/react": "^6.1.15",
+    "@nivo/bar": "^0.88.0",
+    "@nivo/boxplot": "^0.88.0",
+    "@nivo/bullet": "^0.88.0",
+    "@nivo/bump": "^0.88.0",
+    "@nivo/calendar": "^0.88.0",
+    "@nivo/chord": "^0.88.0",
+    "@nivo/circle-packing": "^0.88.0",
+    "@nivo/core": "^0.88.0",
+    "@nivo/funnel": "^0.88.0",
+    "@nivo/geo": "^0.88.0",
+    "@nivo/heatmap": "^0.88.0",
+    "@nivo/line": "^0.88.0",
+    "@nivo/marimekko": "^0.88.0",
+    "@nivo/network": "^0.88.0",
+    "@nivo/parallel-coordinates": "^0.88.0",
+    "@nivo/pie": "^0.88.0",
+    "@nivo/radar": "^0.88.0",
+    "@nivo/radial-bar": "^0.88.0",
+    "@nivo/sankey": "^0.88.0",
+    "@nivo/scatterplot": "^0.88.0",
+    "@nivo/stream": "^0.88.0",
+    "@nivo/sunburst": "^0.88.0",
+    "@nivo/swarmplot": "^0.88.0",
+    "@nivo/treemap": "^0.88.0",
+    "@nivo/voronoi": "^0.88.0",
+    "@nivo/waffle": "^0.88.0",
+    "@tanstack/react-query": "^5.67.1",
+    "apexcharts": "^4.5.0",
+    "axios": "^1.7.9",
+    "color-namer": "^1.4.0",
+    "d3": "^7.9.0",
+    "d3-hexbin": "^0.2.2",
+    "d3-scale": "^4.0.2",
+    "d3-scale-chromatic": "^3.1.0",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
-    "express-async-handler": "^1.2.0",
-    "express-validator": "^7.2.1",
-    "jq": "^1.7.2",
-    "jsonwebtoken": "^9.0.2",
-    "kafka-node": "^5.0.0",
-    "mongoose": "^8.12.1",
-    "multer": "^1.4.5-lts.1",
-    "multer-storage-cloudinary": "^4.0.0",
-    "node-cron": "^3.0.3",
-    "nodemailer": "^6.10.0",
-    "pdfkit": "^0.16.0",
+    "flask": "^0.2.10",
+    "framer-motion": "^11.18.2",
+    "gsap": "^3.12.7",
+    "jquery": "^3.7.1",
+    "maplibre-gl": "^5.2.0",
+    "pg": "^8.13.1",
+    "pg-hstore": "^2.3.4",
+    "prop-types": "^15.8.1",
+    "react": "^18.3.1",
+    "react-apexcharts": "^1.7.0",
+    "react-countup": "^6.5.3",
+    "react-datepicker": "^8.1.0",
+    "react-dom": "^18.3.1",
+    "react-icons": "^5.5.0",
+    "react-router-dom": "^7.2.0",
+    "react-simple-maps": "^3.0.0",
+    "react-swipeable": "^7.0.2",
+    "react-toastify": "^11.0.5",
+    "recharts": "^2.15.1",
     "resend": "^4.1.2",
-    "winston": "^3.17.0"
+    "sequelize": "^6.37.5",
+    "serverless-http": "^3.2.0",
+    "socket.io": "^4.8.1",
+    "socket.io-client": "^4.8.1",
+    "swiper": "^11.2.4",
+    "three": "^0.174.0",
+    "three-stdlib": "^2.35.14",
+    "vite-plugin-sass": "^0.1.0",
+    "vite": "^5.4.10",                    //<— moved here
+    "@vitejs/plugin-react": "^4.3.3"      //<— and here
   },
   "devDependencies": {
-    "@testing-library/react-hooks": "^8.0.1",
-    "nodemon": "^3.1.9"
+    "@babel/core": "^7.26.0",
+    "@babel/preset-env": "^7.26.0",
+    "@babel/preset-react": "^7.26.3",
+    "@eslint/js": "^9.13.0",
+    "@types/react": "^18.3.12",
+    "@types/react-dom": "^18.3.1",
+    "babel-loader": "^9.2.1",
+    "css-loader": "^7.1.2",
+    "eslint": "^9.13.0",
+    "eslint-plugin-react": "^7.37.2",
+    "eslint-plugin-react-hooks": "^5.0.0",
+    "eslint-plugin-react-refresh": "^0.4.14",
+    "file-loader": "^6.2.0",
+    "globals": "^15.11.0",
+    "sass": "^1.83.0",
+    "sass-loader": "^16.0.4",
+    "style-loader": "^4.0.0",
+    "webpack": "^5.97.1",
+    "webpack-cli": "^5.1.4",
+    "webpack-dev-server": "^5.2.0"
   }
 }
