--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "start": "node api/index.js",     
+    "start": "node api/index.js",
     "lint": "eslint .",
     "preview": "vite preview"
   },
@@ -76,7 +76,9 @@
     "swiper": "^11.2.4",
     "three": "^0.174.0",
     "three-stdlib": "^2.35.14",
-    "vite-plugin-sass": "^0.1.0"
+    "vite-plugin-sass": "^0.1.0",
+    "vite": "^5.4.10",
+    "@vitejs/plugin-react": "^4.3.3"
   },
   "devDependencies": {
     "@babel/core": "^7.26.0",
@@ -85,7 +87,6 @@
     "@eslint/js": "^9.13.0",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
-    "@vitejs/plugin-react": "^4.3.3",
     "babel-loader": "^9.2.1",
     "css-loader": "^7.1.2",
     "eslint": "^9.13.0",
@@ -97,7 +98,6 @@
     "sass": "^1.83.0",
     "sass-loader": "^16.0.4",
     "style-loader": "^4.0.0",
-    "vite": "^5.4.10",
     "webpack": "^5.97.1",
     "webpack-cli": "^5.1.4",
     "webpack-dev-server": "^5.2.0"
